<resources>
    <string name="app_name">Resturant_App</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="title">Title:</string>
    <string name="description">Description:</string>
    <string name="price">Price:</string>
    <string name="arrival_time">Arrival Time:</string>
    <string name="rating">Rating:</string>
    <string name="grediants">Grediants:</string>
    <string name="submit">Submit</string>
    <string name="details">Details</string>
    <string name="email_address">Email Address</string>
    <string name="password">Password</string>
    <string name="forgot_password">Forgot Password!</string>
    <string name="login">Login</string>
    <string name="ok">Ok</string>
    <string name="my_profile">My Profile</string>
    <string name="orders">Orders</string>
    <string name="username">Username</string>
    <string name="register">Register</string>
    <string name="hello">Hello</string>
    <string name="home">Home</string>
    <string name="profile">Profile</string>
    <string name="cart">Cart</string>
    <string name="add_product">Add Product</string>
    <string name="logout">Logout</string>
    <string name="reset_password">Reset Password</string>
    <string name="enter_your_email">Enter Your Email</string>
    <string name="send_email">Send Email</string>
</resources>